--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -162,6 +162,11 @@
             <artifactId>opentest4j</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <!-- HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
